--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>this is somthing</h1>
     <p>Hello World</p>
     <div>new branch</div>
+    <div>feat 2 finished</div>
   </body>
 </html>
